# ckanext-mltk

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/mltk/: config.py  config_declaration.yaml  plugin.py
ckanext/mltk/assets/: script.js  webassets.yml
ckanext/mltk/logic/: action.py
ckanext/mltk/tests/: test_plugin.py
ckanext/mltk/utils/: chatgpt_nlp.py  common_nlp.py  keybert_nlp.py
